improved responsivness for phones

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ h2 {
   font-size: 3rem;
   font-weight: normal;
   color: #EA5847;
-
+  line-height: 3rem;
   position: absolute;
   right: 0;
   left: 0;
