added some more margin to the header

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ h1 {
   font-size: 4rem;
   font-weight: normal;
   color: #EA5847;
-  margin: 2rem 0;
+  margin: 3rem 0 2rem;
 }
 h2 {
   font-family: "SEGA LOGO FONT";
