--- a/css/background-effect.css
+++ b/css/background-effect.css
@@ -31,27 +31,27 @@
   }
 }
 body {
-  background-color: #151D24;
-  background-image: url('https://image.ibb.co/dQMeKk/background.jpg');
+  background-color: #151d24;
+  background-image: url("https://image.ibb.co/dQMeKk/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   color: #fff;
-
 }
 .m-intro {
   text-align: center;
-  display:grid;
+  display: grid;
   justify-items: center;
 
   height: 100vh;
   width: 100%;
   margin: 0 auto;
- 
+
   overflow: hidden;
   position: relative;
 }
-.m-intro:before, .m-intro:after {
+.m-intro:before,
+.m-intro:after {
   display: block;
   content: " ";
   width: 2560px;
@@ -67,7 +67,7 @@ body {
   left: 50%;
 }
 .m-intro:before {
-  background-image: url('https://image.ibb.co/dwBeKk/circle_inner.png');
+  background-image: url("https://image.ibb.co/dwBeKk/circle_inner.png");
   background-size: 100% auto;
   -webkit-animation: rotate 30s infinite linear;
   -moz-animation: rotate 30s infinite linear;
@@ -75,11 +75,10 @@ body {
   animation: rotate 30s infinite linear;
 }
 .m-intro:after {
-  background-image: url('https://image.ibb.co/gTN8C5/circle_outer.png');
+  background-image: url("https://image.ibb.co/gTN8C5/circle_outer.png");
   background-size: 100% auto;
   -webkit-animation: rotate 80s infinite linear;
   -moz-animation: rotate 80s infinite linear;
   -o-animation: rotate 80s infinite linear;
   animation: rotate 80s infinite linear;
 }
-
