--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'SEGA LOGO FONT';
-  src: local('SEGA LOGO FONT'), url('SEGA.woff') format('woff');
+  font-family: "SEGA LOGO FONT";
+  src: local("SEGA LOGO FONT"), url("SEGA.woff") format("woff");
 }
 * {
   box-sizing: border-box;
@@ -11,20 +11,24 @@ h1 {
   font-family: "SEGA LOGO FONT";
   font-size: 4rem;
   font-weight: normal;
-  color: #EA5847;
-  margin: 3rem 0 2rem;
+  color: #ea5847;
+  margin: 2.2rem 0 1rem;
 }
 h2 {
   font-family: "SEGA LOGO FONT";
   font-size: 3rem;
   font-weight: normal;
-  color: #EA5847;
+  color: #ea5847;
   line-height: 3rem;
   position: absolute;
   right: 0;
   left: 0;
   top: 30%;
-
+}
+p {
+  font-family: monospace;
+  font-size: 1.5rem;
+  margin-bottom: 0.2rem;
 }
 body {
   display: grid;
@@ -54,13 +58,12 @@ body {
   border: 3px solid black;
   border-radius: 1rem;
   box-shadow: 4px 8px 8px rgba(7, 7, 7, 0.13);
-  transition: transform .5s, visibility 1.5s, filter .5s;
+  transition: transform 0.5s, visibility 1.5s, filter 0.5s;
 }
 
 .card:hover {
   transform: scale(1.07) rotate(2deg);
 }
-
 
 .back {
   display: none;
@@ -80,25 +83,23 @@ body {
 .hide {
   visibility: hidden;
   opacity: 0;
-  transition: opacity .5s ease-in, visibility .5s;
+  transition: opacity 0.5s ease-in, visibility 0.5s;
 }
 
 .show {
   display: block !important;
 }
 
-
-
 .pairEffect {
-  transform: rotate(-3deg) scale(1.15) !important;  
+  transform: rotate(-3deg) scale(1.15) !important;
   filter: grayscale(200%);
 }
 
 button {
   border: none;
   outline: none;
-  padding: .6rem 1.6rem;
-  margin: 1rem .8rem 0 0;
+  padding: 0.6rem 1.6rem;
+  margin: 1rem 0.8rem 0 0;
 
   background-color: rgb(70, 5, 11);
   color: white;
